onClick project activities placeholder

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
       </div>
       <div class="modal-content">
         <div class="modal-content-wrapper">
-          <a class="modal-visit-btn">View Project</a>
+          <a href="#" target="_blank" rel="noopener noreferrer" class="modal-visit-btn hidden">View Project</a>
           <div class="modal-proj-desc">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit, aut laborum
             nam, magni, possimus dolore sit quibusdam sequi ratione nesciunt incidunt perferendis itaque asperiores
             maiores est inventore corrupti doloremque quod?
@@ -47,6 +47,7 @@
       }
     }
   </script>
+  <script src="https://cdn.jsdelivr.net/npm/gsap@3.13.0/dist/gsap.min.js"></script>
   <script type="module" src="./main.js"></script>
 </body>
 
