--- a/index.html
+++ b/index.html
@@ -15,6 +15,20 @@
 </head>
 
 <body>
+  <!-- need to update loading screen style -->
+  <div id="loading-screen" style="
+        position: fixed;
+        top: 0; left: 0; width: 100%; height: 100%;
+        background: #354667;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        font-size: 2rem;
+        z-index: 9999;
+    ">
+    Loading...
+  </div>
 
   <div id="experience">
     <canvas id="experience-canvas"></canvas>
