--- a/index.html
+++ b/index.html
@@ -15,23 +15,19 @@
 </head>
 
 <body>
-  <!-- need to update loading screen style -->
-  <div id="loading-screen" style="
-        position: fixed;
-        top: 0; left: 0; width: 100%; height: 100%;
-        background: #354667;
-        color: #fff;
-        display: flex;
-        align-items: center;
-        justify-content: center;
-        font-size: 2rem;
-        z-index: 9999;
-    ">
-    Loading...
-  </div>
-
   <div id="experience">
     <canvas id="experience-canvas"></canvas>
+  </div>
+
+  <!-- <button id="sound-toggle" class="sound-btn">🔊</button> -->
+
+  <!-- need to update loading screen style -->
+  <div id="loading-screen"
+    style="position: fixed; top:0; left:0; width:100%; height:100%; background:#111; display:flex; justify-content:center; align-items:center; flex-direction:column; z-index:9999;">
+    <div id="loading-text" style="color:white; margin-bottom:10px;">Loading...</div>
+    <div id="loading-bar" style="width: 300px; height: 20px; background: #333; border-radius: 10px; overflow:hidden;">
+      <div id="loading-progress" style="width:0%; height:100%; background: #52abbf;"></div>
+    </div>
   </div>
 
   <div class="modal hidden">
